--- a/src/components/Charts/Pie/index.less
+++ b/src/components/Charts/Pie/index.less
@@ -44,6 +44,7 @@
     background-color: @border-color-split;
   }
   .legendTitle {
+    display: inline;
     color: @text-color;
   }
   .percent {
